src/objects/c2g__codaYear__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpyear</customHelpPage>
    <description>Defines a financial year.</description>
    <fields>
        <fullName>c2g__AdjustmentStatus__c</fullName>
        <label>Adjustment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Adjusted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Adjusted</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__AutomaticPeriodList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Period List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__NumberOfPeriods__c</fullName>
        <label>Number of Periods</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Years</relationshipLabel>
        <relationshipName>Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodCalculationBasis__c</fullName>
        <label>Period Calculation Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month End</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>445</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>454</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>544</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__RetainedEarningsGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retained Earnings GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Years (Retained Earnings GLA)</relationshipLabel>
        <relationshipName>RetainedEarningsGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__SuspenseGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suspense GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Years</relationshipLabel>
        <relationshipName>Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndDate__c</fullName>
        <label>Year End Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndMode__c</fullName>
        <label>Year End Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Full Accounting Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Year</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaYear</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaYear</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaYear</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__NumberOfPeriods__c</columns>
        <columns>c2g__StartDate__c</columns>
        <columns>c2g__EndDate__c</columns>
        <columns>c2g__PeriodCalculationBasis__c</columns>
        <columns>c2g__YearEndDate__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Years</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>